gcc/testsuite/rust/rustc/ui/issues/issue-50264-inner-deref-trait/option-as_deref.rs
fn main() {
    let _result = &Some(42).as_deref();
// { dg-error ".E0599." "" { target *-*-* } .-1 }
}

